[package]
name = "pleme-isvariant-derive"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Per-variant derive proc-macro emitted from a tatara-rust-derive PerVariantDeriveSpec."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
